SERVER-132414 Prevent incorrect swap of $match before dotted path rename (#59924)

GitOrigin-RevId: 683176ec32607002f3ce2c161bcd1d47481b9ad4